--- a/index.html
+++ b/index.html
@@ -7,4 +7,5 @@ title: Alamgir Hossain
 
 I am a PhD student in the applied and computational mathematics of the <a href="http://www.math.sfu.ca/">Department of Mathematics</a> at <a href="http://www.sfu.ca/">Simon Fraser University</a> in Burnaby, near the magical city <a href="http://www.tourismvancouver.com/">Vancouver</a> in beautiful  <a href="http://www.hellobc.com/">British Columbia</a>, Canada. My motherland is a beautiful country, <a href="http://visitbangladesh.gov.bd/">Bangladesh</a>.
 
-More about me: [visit my SFU website](http://sfu.ca/~mahossai/)
+
+More about me: <a href="http://sfu.ca/~mahossai/">visit my SFU website</a>
