--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 ---
 layout: page
+title: Alamgir Hossain
+permalink: /
 ---
 
 <img src="{{ site.baseurl }}assets/profile-placeholder.gif" title="Profile Picture" class="profile">
