--- a/research.html
+++ b/research.html
@@ -13,7 +13,7 @@ permalink: /research/
 
   <p style="margin:0in 0in 0pt;line-height:110%;text-align:justify">Data assimilation methods, Glaciology, Mesoscale Meteorology, Geophysical Fluid Dynamics, Computational Fluid Dynamics, Numerical Analysis, Scientific Computing</p><br>
 
-<p>A brief description of my research is here. <a href="research_areas.html">(link)</a></p>
+<p>A brief description of my research is here. <a href="https://alamgirh.github.io/blog/research_areas/">(link)</a></p>
 
 
 <p style="margin:0in 0in 0pt;text-align:justify"><span>&nbsp;</span></p>
