Update and rename research.html to publications.html

--- a/publications.html
+++ b/publications.html
@@ -1,28 +1,10 @@
 ---
 layout: page
-title: Research
-permalink: /research/
+title: Publications
+permalink: /publications/
 ---
 
-    <p style="margin:-0.2in 0in 0pt;text-align:justify"><span>&nbsp;</span></p>
-	<p style="background:rgb(230,230,230) none repeat scroll 0% 0%;margin:0in -0.2in 0pt;line-height:150%">
-	  <b><span style="line-height:110%">Research Interests:</span></b></p>
-<p style="margin:0in 0in 0pt;text-align:justify"><span>&nbsp;</span></p>
-
-  <p style="margin:0in 0in 0pt;line-height:110%;text-align:justify">Data assimilation methods, Glaciology, Mesoscale Meteorology, Geophysical Fluid Dynamics, Computational Fluid Dynamics, Numerical Analysis, Scientific Computing</p><br>
-
 <p>A brief description of my research is here. <a href="https://alamgirh.github.io/blog/research_areas/">(link)</a></p>
-
-
-<p style="margin:0in 0in 0pt;text-align:justify"><span>&nbsp;</span></p>
-	<p style="background:rgb(230,230,230) none repeat scroll 0% 0%;margin:0in -0.2in 0pt;line-height:150%">
-	  <b>Thesis:</b></p>
-<p style="margin:0in 0in 0pt;text-align:justify"><span>&nbsp;</span></p>
-
-<ol style="margin-top:0in">
-  <li style="margin:0in 0in 0pt;text-align:justify">M.Sc Thesis (Memorial University of Newfoundland):&nbsp; A numerical study of penetrative turbulence in convective boundary layers <a href="http://research.library.mun.ca/8492/" rel="nofollow">(link)</a></li>
-  <li style="margin:0in 0in 0pt;;text-align:justify">M.S Thesis (University of Dhaka):&nbsp; Double Integrals over an Arbitrary Triangular Region.</li>
-</ol>
 
 <p style="margin:0in 0in 0pt;text-align:justify"><span>&nbsp;</span></p>
 	<p style="background:rgb(230,230,230) none repeat scroll 0% 0%;margin:0in -0.2in 0pt;line-height:150%">
@@ -44,7 +26,17 @@ permalink: /research/
 	<li style="margin:0in 0in 0pt;text-align:justify">Md. Shafiqul Islam and <b>M. Alamgir Hossain</b> (2008)- Numerical Integration over an Arbitrary Triangular Region, International e-Journal of Numerical&nbsp;Analysis and Related Topics (IeJNART), Vol 2, June 2008. </li>
       </ol>
 
-      <p style="margin:0in 0in 0pt;text-align:justify"><span>&nbsp;</span></p>
+<p style="margin:0in 0in 0pt;text-align:justify"><span>&nbsp;</span></p>
+	<p style="background:rgb(230,230,230) none repeat scroll 0% 0%;margin:0in -0.2in 0pt;line-height:150%">
+	  <b>Thesis:</b></p>
+<p style="margin:0in 0in 0pt;text-align:justify"><span>&nbsp;</span></p>
+
+<ol style="margin-top:0in">
+  <li style="margin:0in 0in 0pt;text-align:justify">M.Sc Thesis (Memorial University of Newfoundland):&nbsp; A numerical study of penetrative turbulence in convective boundary layers <a href="http://research.library.mun.ca/8492/" rel="nofollow">(link)</a></li>
+  <li style="margin:0in 0in 0pt;;text-align:justify">M.S Thesis (University of Dhaka):&nbsp; Double Integrals over an Arbitrary Triangular Region.</li>
+</ol>
+
+<p style="margin:0in 0in 0pt;text-align:justify"><span>&nbsp;</span></p>
 	<p style="background:rgb(230,230,230) none repeat scroll 0% 0%;margin:0in -0.2in 0pt;line-height:150%">
 	  <b>Conference and Seminar Presentations:</b></p>
 <p style="margin:0in 0in 0pt;text-align:justify"><span>&nbsp;</span></p>
