--- a/research.html
+++ b/research.html
@@ -6,10 +6,10 @@ permalink: /publications/
   <p style="margin:-0.2in 0in 0pt;text-align:justify"><span>&nbsp;</span></p>
 	<p style="background:rgb(230,230,230) none repeat scroll 0% 0%;margin:0in -0.2in 0pt;line-height:150%">
 	  <b><span style="line-height:110%">Research Interests:</span></b></p>
-<p style="margin:0in 0in 0pt;text-align:justify"><span>&nbsp;</span></p>
 
-<p style="margin:0in 0in 0pt;line-height:110%;text-align:justify">Data assimilation methods, Glaciology, Mesoscale Meteorology, Geophysical Fluid Dynamics, Computational Fluid Dynamics, Numerical Analysis, Scientific Computing</p>
-
+<p style="margin:0in 0in 0pt;text-align:justify">Data assimilation methods, Glaciology, Mesoscale Meteorology, 
+	Geophysical Fluid Dynamics, Computational Fluid Dynamics, Numerical Analysis, Scientific Computing</p>
+<br>
 <p>A brief description of my research is here. <a href="https://alamgirh.github.io/blog/research_areas/">(link)</a></p>
 
 <p style="margin:0in 0in 0pt;text-align:justify"><span>&nbsp;</span></p>
