--- a/research.html
+++ b/research.html
@@ -1,12 +1,12 @@
 ---
 layout: page
 title: Research
-permalink: /publications/
+permalink: /research/
 ---
   <p style="margin:-0.2in 0in 0pt;text-align:justify"><span>&nbsp;</span></p>
 	<p style="background:rgb(230,230,230) none repeat scroll 0% 0%;margin:0in -0.2in 0pt;line-height:150%">
 	  <b><span style="line-height:110%">Research Interests:</span></b></p>
-
+<br>
 <p style="margin:0in 0in 0pt;text-align:justify">Data assimilation methods, Glaciology, Mesoscale Meteorology, 
 	Geophysical Fluid Dynamics, Computational Fluid Dynamics, Numerical Analysis, Scientific Computing</p>
 <br>
